--- a/templates/index.html
+++ b/templates/index.html
@@ -1,22 +1,69 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 {% load staticfiles %}
-<head>
-  <title>Themer</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-  <!-- PhotoEditorSDK CSS / JS -->
-  <link rel="stylesheet" href={% static "css/PhotoEditorReactUI.css" %} />
-  <link rel="stylesheet" href={% static "stylesheet.css" %} />
-  <script src={% static "js/PhotoEditorSDK.js" %}></script>
-  <script src={% static "js/PhotoEditorReactUI.js" %}></script>
+    <title>Themer</title>
 
-  <script src={% static "application.js" %}></script>
-</head>
-<body>
-  <div id="container" class="fullscreen"></div>
-  <div class="links">
-    <a href="#" id="webgl" class="link active">WebGL</a> | <a href="#" id="canvas" class="link">Canvas</a>
-  </div>
-</body>
+    <!-- Bootstrap core CSS -->
+    <link href={% static "css/bootstrap.min.css" %} rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href={% static "css/cover.css"%} rel="stylesheet">
+
+  </head>
+
+  <body>
+
+    <div class="site-wrapper">
+
+      <div class="site-wrapper-inner">
+
+        <div class="cover-container">
+
+          <div class="masthead clearfix">
+            <div class="inner">
+              <h3 class="masthead-brand">Themer</h3>
+              <nav>
+                <ul class="nav masthead-nav">
+                  <li class="active"><a href="#">Home</a></li>
+                  <li><a href="#">Features</a></li>
+                  <li><a href="#">Contact</a></li>
+                </ul>
+              </nav>
+            </div>
+          </div>
+
+          <div class="inner cover">
+            <h1 class="cover-heading">主题改变世界</h1>
+            <br>
+            <p class="lead">
+              <a href="editor" class="btn btn-lg btn-default">Have a try</a>
+            </p>
+          </div>
+
+          <div class="mastfoot">
+            <div class="inner">
+              <p>SOA 2016</p>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script>window.jQuery || document.write('<script src={% static "js/vendor/jquery-1.12.0.min.js"%}><\/script>')</script>
+    <script src={% static "js/vendor/bootstrap.min.js" %}></script>
+  </body>
 </html>
