--- a/templates/index.html
+++ b/templates/index.html
@@ -1,69 +1,134 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'framework/base.html' %}
+
 {% load staticfiles %}
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
 
-    <title>Themer</title>
+{% block sheetstyle %}
+    <link rel="stylesheet" href={% static "css/cover.css"%}>
+    <style>
 
-    <!-- Bootstrap core CSS -->
-    <link href={% static "css/bootstrap.min.css" %} rel="stylesheet">
+    </style>
+{% endblock %}
 
-    <!-- Custom styles for this template -->
-    <link href={% static "css/cover.css"%} rel="stylesheet">
-
-  </head>
-
-  <body>
-
+{% block body %}
     <div class="site-wrapper">
 
-      <div class="site-wrapper-inner">
+        <div class="site-wrapper-inner">
 
-        <div class="cover-container">
+            <div class="cover-container">
 
-          <div class="masthead clearfix">
-            <div class="inner">
-              <h3 class="masthead-brand">Themer</h3>
-              <nav>
-                <ul class="nav masthead-nav">
-                  <li class="active"><a href="#">Home</a></li>
-                  <li><a href="#">Features</a></li>
-                  <li><a href="#">Contact</a></li>
-                </ul>
-              </nav>
+                <div class="inner cover">
+                    <h1 class="cover-heading">主题改变世界</h1>
+                    <br>
+                    <p class="lead">
+                        <a class="btn btn-lg btn-default" data-toggle="modal" data-target="#loginModal">Have a try</a>
+                    </p>
+                </div>
+
+                <div class="mastfoot">
+                    <div class="inner">
+                        <p>SOA 2016</p>
+                    </div>
+                </div>
+
             </div>
-          </div>
-
-          <div class="inner cover">
-            <h1 class="cover-heading">主题改变世界</h1>
-            <br>
-            <p class="lead">
-              <a href="editor" class="btn btn-lg btn-default">Have a try</a>
-            </p>
-          </div>
-
-          <div class="mastfoot">
-            <div class="inner">
-              <p>SOA 2016</p>
-            </div>
-          </div>
 
         </div>
 
-      </div>
-
     </div>
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script>window.jQuery || document.write('<script src={% static "js/vendor/jquery-1.12.0.min.js"%}><\/script>')</script>
-    <script src={% static "js/vendor/bootstrap.min.js" %}></script>
-  </body>
-</html>
+    <!-- Modal -->
+    <div class="modal fade" id="loginModal" tabindex="-1" role="dialog">
+        <div class="modal-dialog modal-sm" role="document">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <ul class="nav nav-tabs nav-justified">
+                        <li class="active"><a data-toggle="tab" href="#login">登录</a></li>
+                        <li><a data-toggle="tab" href="#register">注册</a></li>
+
+                    </ul>
+
+                    <div class="tab-content">
+                        <div id="login" class="tab-pane fade in active">
+                            <form id="loginForm" method="POST" action="/u/login/" >
+
+                                <div class="form-group">
+                                    <label for="username" class="control-label">用户名</label>
+                                    <input type="text" class="form-control" id="username" name="username" value="" required placeholder="example@gmail.com">
+                                    <span class="help-block"></span>
+                                </div>
+                                <div class="form-group">
+                                    <label for="password" class="control-label">密码</label>
+                                    <input type="password" class="form-control" id="password" name="password" value="" required >
+                                    <span class="help-block"></span>
+                                </div>
+                                {% if login_message %}
+                                    <div class="alert alert-danger" role="alert">{{ login_message }}</div>
+                                {% endif %}
+                                <div class="checkbox">
+                                    <label>
+                                        <input type="checkbox" name="remember" id="remember"> 记住我
+                                    </label>
+                                </div>
+                                {% csrf_token %}
+                                <button type="submit" class="btn btn-success btn-block">登录</button>
+                                <hr/>
+                                <div class="btn btn-primary btn-block" id="sign-in-google">使用微博账号登陆</div>
+                                <div class="btn btn-primary btn-block pull-down" id="sign-in-google">使用微信账号登陆</div>
+                            </form>
+                        </div>
+                        <div id="register" class="tab-pane fade">
+                            <form id="registerForm" method="POST" action="/u/register/" >
+                                <div class="form-group">
+                                    <label for="username" class="control-label">用户名</label>
+                                    <input type="text" class="form-control" id="username" name="username" value="" required placeholder="example@gmail.com">
+                                    <span class="help-block"></span>
+                                </div>
+                                <div class="form-group">
+                                    <label for="password" class="control-label">密码</label>
+                                    <input type="password" class="form-control" id="password1" name="password1" value="" required >
+                                    <span class="help-block"></span>
+                                </div>
+                                <div class="form-group">
+                                    <label for="password" class="control-label">确认密码</label>
+                                    <input type="password" class="form-control" id="password2" name="password2" value="" required >
+                                    <span class="help-block"></span>
+                                </div>
+                                {% csrf_token %}
+                                {% if register_message %}
+                                    <div class="alert alert-danger" role="alert">{{ register_message }}</div>
+                                {% endif %}
+                                <button type="submit" class="btn btn-info btn-block">立刻注册</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+{% endblock %}
+
+{% block script %}
+    <script>
+        {% if login_message %}
+            $(document).ready(function() {
+                var v = $("#loginModal");
+                v.removeClass("fade");
+                v.attr("data-backdrop", "static");
+                v.attr("data-keyboard", "false");
+                v.modal();
+                $('.nav-tabs a[href="#' + 'login' + '"]').tab('show');
+            });
+        {% endif %}
+        {% if register_message %}
+            $(document).ready(function() {
+                var v = $("#loginModal");
+                v.removeClass("fade");
+                v.attr("data-backdrop", "static");
+                v.attr("data-keyboard", "false");
+                v.modal();
+                $('.nav-tabs a[href="#' + 'register' + '"]').tab('show');
+            });
+        {% endif %}
+
+    </script>
+{% endblock %}
