--- a/templates/framework/base.html
+++ b/templates/framework/base.html
@@ -25,7 +25,7 @@
     <title>Themer</title>
 </head>
 <body>
-<div class="navbar navbar-fixed-top navbar-inverse" role="navigation">
+<div class="navbar navbar-inverse" role="navigation">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -86,22 +86,22 @@
 
 <script>
     // Ajax Loading GIF
-    $(document).on({
-        ajaxStart: function() {$("#pleaseWaitDialog").modal('show');},
-        ajaxStop: function() {$("#pleaseWaitDialog").modal('hide');}
-    });
-
-    $('.modal').on('show.bs.modal', reposition);
-
-    function reposition() {
-        var modal = $(this),
-                dialog = modal.find('.modal-dialog');
-        modal.css('display', 'block');
-
-        // Dividing by two centers the modal exactly, but dividing by three
-        // or four works better for larger screens.
-        dialog.css("margin-top", Math.max(0, ($(window).height() - dialog.height()) / 2));
-    }
+{#    $(document).on({#}
+{#        ajaxStart: function() {$("#pleaseWaitDialog").modal('show');},#}
+{#        ajaxStop: function() {$("#pleaseWaitDialog").modal('hide');}#}
+{#    });#}
+{##}
+{#    $('.modal').on('show.bs.modal', reposition);#}
+{##}
+{#    function reposition() {#}
+{#        var modal = $(this),#}
+{#                dialog = modal.find('.modal-dialog');#}
+{#        modal.css('display', 'block');#}
+{##}
+{#        // Dividing by two centers the modal exactly, but dividing by three#}
+{#        // or four works better for larger screens.#}
+{#        dialog.css("margin-top", Math.max(0, ($(window).height() - dialog.height()) / 2));#}
+{#    }#}
 
     // CSRF Bypass
     function csrfSafeMethod(method) {
