--- a/static/css/PhotoEditorReactUI.css
+++ b/static/css/PhotoEditorReactUI.css
@@ -168,6 +168,7 @@
   left: 0;
   width: 100%;
   height: 30px;
+  display: none;
   background: #1B1B1B;
   text-align: center; }
   .pesdk-react-editor .pesdk-react-header__label {
@@ -208,7 +209,7 @@
   border-radius: 5px;
   width: 100%;
   height: 100%;
-  padding-top: 30px;
+  padding-top: 0px;
   background: #2B2B2B; }
 
 /*
