--- a/templates/timeline/timeline.html
+++ b/templates/timeline/timeline.html
@@ -81,6 +81,7 @@
 {% endblock %}
 
 {% block main_content %}
+    <div class="container">
     <div class="blog-header">
         <h1 class="blog-title">展示广场</h1>
         <p class="lead blog-description">The official example template of creating a blog with Bootstrap.</p>
@@ -128,6 +129,7 @@
           </div>
         </div>
 
+    </div>
     </div>
 {% endblock %}
 
