--- a/static/css/cover.css
+++ b/static/css/cover.css
@@ -28,8 +28,8 @@ body {
 .site-wrapper {
   display: table;
   width: 100%;
-  height: 100%; /* For at least Firefox */
-  min-height: 100%;
+  height: calc(100% - 52px); /* For at least Firefox */
+  min-height: calc(100% - 52px);
   -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
           box-shadow: inset 0 0 100px rgba(0,0,0,.5);
 }
