--- a/templates/framework/base.html
+++ b/templates/framework/base.html
@@ -84,22 +84,22 @@
 
 <script>
     // Ajax Loading GIF
-{#    $(document).on({#}
-{#        ajaxStart: function() {$("#pleaseWaitDialog").modal('show');},#}
-{#        ajaxStop: function() {$("#pleaseWaitDialog").modal('hide');}#}
-{#    });#}
-{##}
-{#    $('.modal').on('show.bs.modal', reposition);#}
-{##}
-{#    function reposition() {#}
-{#        var modal = $(this),#}
-{#                dialog = modal.find('.modal-dialog');#}
-{#        modal.css('display', 'block');#}
-{##}
-{#        // Dividing by two centers the modal exactly, but dividing by three#}
-{#        // or four works better for larger screens.#}
-{#        dialog.css("margin-top", Math.max(0, ($(window).height() - dialog.height()) / 2));#}
-{#    }#}
+    $(document).on({
+        ajaxStart: function() {$("#pleaseWaitDialog").modal('show');},
+        ajaxStop: function() {$("#pleaseWaitDialog").modal('hide');}
+    });
+
+    $('.modal').on('show.bs.modal', reposition);
+
+    function reposition() {
+        var modal = $(this),
+                dialog = modal.find('.modal-dialog');
+        modal.css('display', 'block');
+
+        // Dividing by two centers the modal exactly, but dividing by three
+        // or four works better for larger screens.
+        dialog.css("margin-top", Math.max(0, ($(window).height() - dialog.height()) / 2));
+    }
 
     // CSRF Bypass
     function csrfSafeMethod(method) {
