--- a/templates/framework/base.html
+++ b/templates/framework/base.html
@@ -5,63 +5,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
 
+    <title>Picature - Share You Photos and Theme</title>
+
     <link rel="shortcut icon" type="image/png" href={% static "favicon.png"%}/>
-    <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href={% static "css/bootstrap.min.css" %}>
+
+    <!-- Bootstrap Core CSS -->
+    <link href={% static "css/bootstrap.min.css" %} rel="stylesheet">
+
+    <!-- Custom CSS -->
     <link rel="stylesheet" href={% static "css/base.css" %}>
 
-    <!-- Custom styles for this template -->
+    <!-- Custom Fonts -->
+    <link href={% static "font-awesome/css/font-awesome.min.css"%} rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
 
     <!-- Extends it in submodules-->
     {% block sheetstyle %}
 
     {% endblock %}
-
-    <title>Themer</title>
 </head>
-<body>
-<div class="navbar navbar-inverse" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">导航</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" rel="home" title="Themer">
-                Themer
-            </a>
-        </div>
-        <div class="collapse navbar-collapse">
-            {% block navbar %}
-                {% include 'framework/navbar.html' %}
-            {% endblock %}
-        </div>
-    </div>
-</div>
-
-{% block body %}
 
 
+<body id="page-top" class="index">
 
-{% block main_content %}
-
+{% block navbar %}
 {% endblock %}
 
 
-<footer>
-    <div class="container">
-        <div class="row row-offcanvas row-offcanvas-left">
-            <p>SOA 2016 </p>
-        </div>
-    </div>
-</footer>
+
+{% block body %}
+
+{% block main_content %}
+    {% include 'framework/navbar.html' %}
+{% endblock %}
+
+{% block footer %}
+    {% include 'framework/footer.html' %}
+{% endblock %}
 
 {% endblock %}
 
@@ -79,8 +72,16 @@
 
 
 <!-- Placed at the end of the document so the pages load faster -->
+<!-- jQuery -->
 <script src={% static "js/vendor/jquery-1.12.0.min.js"%}></script>
+<!-- Bootstrap Core JavaScript -->
 <script src={% static "js/vendor/bootstrap.min.js" %}></script>
+<!-- Plugin JavaScript -->
+<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+<script src={% static "js/classie.js" %}></script>
+
+<!-- Custom Theme JavaScript -->
+<script src={% static "js/agency.js" %}></script>
 
 <script>
     // Ajax Loading GIF
@@ -136,5 +137,6 @@
 {% block script %}
     <!-- Extends it in submodules -->
 {% endblock %}
+
 </body>
 </html>
