--- a/templates/framework/navbar_index.html
+++ b/templates/framework/navbar_index.html
@@ -1,5 +1,5 @@
 <!-- Navigation -->
-<nav class="navbar navbar-default navbar-shrink">
+<nav class="navbar navbar-default navbar-fixed-top">
 <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header page-scroll">
@@ -9,7 +9,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand page-scroll" href={% url 'home'%}>Picature</a>
+        <a class="navbar-brand page-scroll" href="#page-top">Picature</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -22,6 +22,18 @@
       <ul class="nav navbar-nav navbar-right">
           <li class="hidden">
               <a href="#page-top"></a>
+          </li>
+          <li>
+              <a class="page-scroll" href="#services">Features</a>
+          </li>
+          <li>
+              <a class="page-scroll" href="#portfolio">Portfolio</a>
+          </li>
+          <li>
+              <a class="page-scroll" href="#team">Team</a>
+          </li>
+          <li>
+              <a class="page-scroll" data-toggle="modal" href="#loginModal">LogIn</a>
           </li>
       </ul>
     </div>
