--- a/templates/index.html
+++ b/templates/index.html
@@ -3,47 +3,248 @@
 {% load staticfiles %}
 
 {% block sheetstyle %}
-    <link rel="stylesheet" href={% static "css/cover.css"%}>
-    <style>
-
-    </style>
+    <link rel="stylesheet" href={% static "css/agency.css" %}>
 {% endblock %}
 
-{% block body %}
-    <div class="site-wrapper">
+{% block navbar %}
+    {% include 'framework/navbar_index.html' %}
+{% endblock %}
 
-        <div class="site-wrapper-inner">
+{% block main_content %}
 
-            <div class="cover-container">
+    <!-- Header -->
+    <header>
+        <div class="container">
+            <div class="intro-text">
+                <div class="intro-lead-in">Customize and Share Your Theme</div>
+                <div class="intro-heading">Picature</div>
+                <a href="#services" class="page-scroll btn btn-xl">Have a Try</a>
+            </div>
+        </div>
+    </header>
 
-                <div class="inner cover">
-                    <h1 class="cover-heading">主题改变世界</h1>
-                    <br>
-                    <p class="lead">
-                        <a class="btn btn-lg btn-default" data-toggle="modal" data-target="#loginModal">Have a try</a>
-                    </p>
+    <!-- Services Section -->
+    <section id="services">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Features</h2>
+                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
+            </div>
+            <div class="row text-center">
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">E-Commerce</h4>
+                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                </div>
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Responsive Design</h4>
+                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                </div>
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Web Security</h4>
+                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
-                <div class="mastfoot">
-                    <div class="inner">
-                        <p>SOA 2016</p>
+    <!-- Portfolio Grid Section -->
+    <section id="portfolio" class="bg-light-gray">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Portfolio</h2>
+                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover" data-toggle="tooltip" title="click to apply this theme">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src={% static "img/portfolio/roundicons.png" %} class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Round Icons</h4>
+                        <p class="text-muted">Graphic Design</p>
                     </div>
                 </div>
-
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover" data-toggle="tooltip" title="click to apply this theme">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src={% static "img/portfolio/startup-framework.png" %} class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Startup Framework</h4>
+                        <p class="text-muted">Website Design</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover" data-toggle="tooltip" title="click to apply this theme">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src={% static "img/portfolio/treehouse.png" %} class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Treehouse</h4>
+                        <p class="text-muted">Website Design</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover" data-toggle="tooltip" title="click to apply this theme">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src={% static "img/portfolio/golden.png" %} class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Golden</h4>
+                        <p class="text-muted">Website Design</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover" data-toggle="tooltip" title="click to apply this theme">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src={% static "img/portfolio/escape.png" %} class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Escape</h4>
+                        <p class="text-muted">Website Design</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover" data-toggle="tooltip" title="click to apply this theme">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src={% static "img/portfolio/dreams.png" %} class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Dreams</h4>
+                        <p class="text-muted">Website Design</p>
+                    </div>
+                </div>
             </div>
-
         </div>
+    </section>
 
+    <!-- Team Section -->
+    <section id="team" class="bg-light-gray">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Our Amazing Team</h2>
+                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img src={% static "img/team/1.jpg" %} class="img-responsive img-circle" alt="">
+                        <h4>Kay Garland</h4>
+                        <p class="text-muted">Lead Designer</p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img src={% static "img/team/2.jpg" %} class="img-responsive img-circle" alt="">
+                        <h4>Larry Parker</h4>
+                        <p class="text-muted">Lead Marketer</p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img src={% static "img/team/3.jpg" %} class="img-responsive img-circle" alt="">
+                        <h4>Diana Pertersen</h4>
+                        <p class="text-muted">Lead Developer</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur
+                      adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis
+                      ad perspiciatis, totam corporis ea, alias ut unde.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Portfolio Modals -->
+    <!-- Use the modals below to showcase details about your portfolio projects! -->
+
+    <!-- Portfolio Modal 1 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <!-- Project Details Go Here -->
+                            <h2>Project Name</h2>
+                            <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                            <img class="img-responsive img-centered" src={% static "img/portfolio/roundicons-free.png" %} alt="">
+                            <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                            <p>
+                                <strong>Want these icons in this portfolio item sample?</strong>You can download 60 of them for free, courtesy of <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">RoundIcons.com</a>, or you can purchase the 1500 icon set <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">here</a>.</p>
+                            <ul class="list-inline">
+                                <li>Date: July 2014</li>
+                                <li>Client: Round Icons</li>
+                                <li>Category: Graphic Design</li>
+                            </ul>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
-    <!-- Modal -->
+    <!-- LogIn or SignUp Modal -->
     <div class="modal fade" id="loginModal" tabindex="-1" role="dialog">
         <div class="modal-dialog modal-sm" role="document">
             <div class="modal-content">
                 <div class="modal-body">
                     <ul class="nav nav-tabs nav-justified">
-                        <li class="active"><a data-toggle="tab" href="#login">登录</a></li>
-                        <li><a data-toggle="tab" href="#register">注册</a></li>
+                        <li class="active"><a data-toggle="tab" href="#login">Log In</a></li>
+                        <li><a data-toggle="tab" href="#register">Sign Up</a></li>
 
                     </ul>
 
@@ -52,12 +253,12 @@
                             <form id="loginForm" method="POST" action="/u/login/" >
 
                                 <div class="form-group">
-                                    <label for="username" class="control-label">用户名</label>
+                                    <label for="username" class="control-label">Username</label>
                                     <input type="text" class="form-control" id="username" name="username" value="" required placeholder="example@gmail.com">
                                     <span class="help-block"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label for="password" class="control-label">密码</label>
+                                    <label for="password" class="control-label">Password</label>
                                     <input type="password" class="form-control" id="password" name="password" value="" required >
                                     <span class="help-block"></span>
                                 </div>
@@ -66,11 +267,11 @@
                                 {% endif %}
                                 <div class="checkbox">
                                     <label>
-                                        <input type="checkbox" name="remember" id="remember"> 记住我
+                                        <input type="checkbox" name="remember" id="remember"> Remember me
                                     </label>
                                 </div>
                                 {% csrf_token %}
-                                <button type="submit" class="btn btn-success btn-block">登录</button>
+                                <button type="submit" class="btn btn-success btn-block">LogIn</button>
                                 <hr/>
                                 <div class="btn btn-primary btn-block" id="sign-in-google">使用微博账号登陆</div>
                                 <div class="btn btn-primary btn-block pull-down" id="sign-in-google">使用微信账号登陆</div>
@@ -79,17 +280,17 @@
                         <div id="register" class="tab-pane fade">
                             <form id="registerForm" method="POST" action="/u/register/" >
                                 <div class="form-group">
-                                    <label for="username" class="control-label">用户名</label>
+                                    <label for="username" class="control-label">Username</label>
                                     <input type="text" class="form-control" id="username" name="username" value="" required placeholder="example@gmail.com">
                                     <span class="help-block"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label for="password" class="control-label">密码</label>
+                                    <label for="password" class="control-label">Password</label>
                                     <input type="password" class="form-control" id="password1" name="password1" value="" required >
                                     <span class="help-block"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label for="password" class="control-label">确认密码</label>
+                                    <label for="password" class="control-label">Confirm password</label>
                                     <input type="password" class="form-control" id="password2" name="password2" value="" required >
                                     <span class="help-block"></span>
                                 </div>
@@ -97,7 +298,7 @@
                                 {% if register_message %}
                                     <div class="alert alert-danger" role="alert">{{ register_message }}</div>
                                 {% endif %}
-                                <button type="submit" class="btn btn-info btn-block">立刻注册</button>
+                                <button type="submit" class="btn btn-info btn-block">Sign Up</button>
                             </form>
                         </div>
                     </div>
@@ -108,6 +309,7 @@
 {% endblock %}
 
 {% block script %}
+    <script src={% static "js/cbpAnimatedHeader.js" %}></script>
     <script>
         {% if login_message %}
             $(document).ready(function() {
