--- a/templates/framework/footer.html
+++ b/templates/framework/footer.html
@@ -1,9 +1,13 @@
 <!-- footer -->
 <footer>
     <div class="container">
-        <div class="row">
+        <div class="row soa-footer">
             <div class="col-md-4 col-md-offset-4">
-                <span class="copyright">Picature &copy; SOA 2014</span>
+                <span class="copyright">
+                    <div class="text-center text-muted">
+                        Picature &copy; SOA 2014
+                    </div>
+                </span>
             </div>
         </div>
     </div>
