--- a/templates/framework/navbar.html
+++ b/templates/framework/navbar.html
@@ -18,6 +18,9 @@
         <li>
           <a class="page-scroll" href="{% url "timeline" %}">Discovery</a>
         </li>
+        <li>
+          <a class="page-scroll" href={% url "editor" %}>Editor</a>
+        </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
           <li class="hidden">
