--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
             <div class="intro-text">
                 <div class="intro-lead-in">Customize and Share Your Theme</div>
                 <div class="intro-heading">Picature</div>
-                <a href="#services" class="page-scroll btn btn-xl">Have a Try</a>
+                <a href={% url "editor" %} class="page-scroll btn btn-xl">Have a Try</a>
             </div>
         </div>
     </header>
