--- a/static/css/timeline.css
+++ b/static/css/timeline.css
@@ -1,77 +1,3 @@
-.card {
-    background:#FFF;
-    border:1px solid #AAA;
-    border-bottom:3px solid #BBB;
-    padding:0;
-    margin:15px;
-    overflow:hidden;
-}
-.card h1 {
-    margin:0;
-    padding: 10px 10px 0;
-}
-
-.card p {
-    margin:0;
-    padding:10px;
-}
-
-.card-image {
-    padding:0;
-    margin:0;
-    background: no-repeat;
-    background-size: cover;
-    position:relative;
-    overflow:hidden;
-}
-
-.card-image > img {
-    vertical-align: top;
-    max-width: 300px;
-{#    width: 100%;#}
-    height: auto;
-    opacity: 0;
-}
-
-.card-image h1,
-.card-image h2,
-.card-image h3,
-.card-image h4,
-.card-image h5,
-.card-image h6 {
-    position:absolute;
-    bottom:0;
-    width:100%;
-    color:white;
-    background:rgba(0,0,0,0.65);
-    margin:0;
-    padding:6px;
-    border:none;
-}
-
-.blog-header {
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-
-.blog-title {
-    margin-top: 30px;
-    margin-bottom: 0;
-    font-size: 60px;
-    font-weight: normal;
-}
-
-.sidebar-module-inset {
-    padding: 15px;
-    background-color: #f5f5f5;
-    border-radius: 4px;
-}
-
-.sidebar-module {
-    padding: 15px;
-    margin: 0 -15px 15px;
-}
-
 section {
 	padding:0px 0
 }
@@ -97,18 +23,18 @@ section h3.section-subheading {
 	margin:15px 0;
 	text-transform:none
 }
-#portfolio .portfolio-item {
+.portfolio-item {
     margin-top: 10px;
     margin-bottom: 10px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     padding: 0px
 }
-#portfolio .portfolio-item .portfolio-link {
+.portfolio-item .portfolio-link {
 	display:block;
 	position:relative;
 	margin:0 auto
 }
-#portfolio .portfolio-item .portfolio-link .portfolio-hover {
+.portfolio-item .portfolio-link .portfolio-hover {
 	background:rgba(254,209,54,.9);
 	position:absolute;
 	width:100%;
@@ -118,14 +44,14 @@ section h3.section-subheading {
 	-webkit-transition:all ease .5s;
 	-moz-transition:all ease .5s
 }
-#portfolio .portfolio-item .portfolio-link .portfolio-hover:hover {
+.portfolio-item .portfolio-link .portfolio-hover:hover {
 	opacity:1
 }
-#portfolio .portfolio-item .portfolio-link >img {
+.portfolio-item .portfolio-link >img {
     width: 100%;
     height: auto;
 }
-#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content {
+.portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content {
 	position:absolute;
 	width:100%;
 	height:20px;
@@ -135,37 +61,151 @@ section h3.section-subheading {
 	margin-top:-12px;
 	color:#fff
 }
-#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content i {
+.portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content i {
 	margin-top:-12px
 }
-#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content h3,#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content h4 {
+.portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content h3,.portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content h4 {
 	margin:0
 }
-#portfolio .portfolio-item .portfolio-caption {
+.portfolio-item .portfolio-caption {
 	/*max-width:400px;*/
 	margin:0 auto;
 	background-color:#fff;
 	text-align:center;
 	padding:25px;
 }
-#portfolio .portfolio-item .portfolio-caption h4 {
+.portfolio-item .portfolio-caption h4 {
 	text-transform:none;
 	margin:0
 }
-#portfolio .portfolio-item .portfolio-caption p {
+.portfolio-item .portfolio-caption p {
 	font-family:"Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
 	font-style:italic;
 	font-size:16px;
 	margin:0
 }
-#portfolio * {
+* {
 	z-index:2
 }
 @media (min-width:767px) {
-	#portfolio .portfolio-item {
+	.portfolio-item {
         margin-top: 20px;
         margin-bottom: 20px;
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
         padding: 0px
 	}
+}
+.portfolio-modal .modal-content {
+	border-radius:0;
+	background-clip:border-box;
+	-webkit-box-shadow:none;
+	box-shadow:none;
+	border:0;
+	min-height:100%;
+	padding:50px 0;
+	text-align:center
+}
+.portfolio-modal .modal-content h2 {
+	margin-bottom:15px;
+	font-size:3em
+}
+.portfolio-modal .modal-content p {
+	margin-bottom:30px
+}
+.portfolio-modal .modal-content p.item-intro {
+	margin:20px 0 30px;
+	font-family:"Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
+	font-style:italic;
+	font-size:16px
+}
+.portfolio-modal .modal-content ul.list-inline {
+	margin-bottom:30px;
+	margin-top:0
+}
+.portfolio-modal .close-modal {
+	position:absolute;
+	width:75px;
+	height:75px;
+	background-color:transparent;
+	top:25px;
+	right:25px;
+	cursor:pointer
+}
+.portfolio-modal .close-modal:hover {
+	opacity:.3
+}
+.portfolio-modal .close-modal .lr {
+	height:75px;
+	width:1px;
+	margin-left:35px;
+	background-color:#222;
+	transform:rotate(45deg);
+	-ms-transform:rotate(45deg);
+	-webkit-transform:rotate(45deg);
+	z-index:1051
+}
+.portfolio-modal .close-modal .lr .rl {
+	height:75px;
+	width:1px;
+	background-color:#222;
+	transform:rotate(90deg);
+	-ms-transform:rotate(90deg);
+	-webkit-transform:rotate(90deg);
+	z-index:1052
+}
+.portfolio-modal .modal-backdrop {
+    z-index: 0;
+	opacity:0;
+	display:none
+}
+::-moz-selection {
+	text-shadow:none;
+	background:#fed136
+}
+::selection {
+	text-shadow:none;
+	background:#fed136
+}
+img::selection {
+	background:0 0
+}
+img::-moz-selection {
+	background:0 0
+}
+body {
+	webkit-tap-highlight-color:#fed136
+}
+
+#photo-gallary .photo-gallary-hover {
+    position: relative;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+#photo-gallary .photo-gallary-hover .photo-gallary-hover-content{
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+    color: #fff;
+    transition: z-index .5s;
+    transition: background-color .5s;
+}
+
+#photo-gallary .photo-gallary-hover:hover .photo-gallary-hover-content{
+    z-index: 2000;
+    background: rgba(254,209,54,.9);
+}
+
+#photo-gallary .photo-gallary-hover i {
+    position: absolute;
+    top: 35%;
+    left: 35%;
+}
+
+.btn-modal-apply {
+    margin-top: 40px;
 }
