--- a/templates/framework/navbar_index.html
+++ b/templates/framework/navbar_index.html
@@ -16,7 +16,10 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li>
-          <a class="page-scroll" href="{% url "timeline" %}">Discovery</a>
+          <a class="page-scroll" href={% url "timeline" %}>Discovery</a>
+        </li>
+        <li>
+          <a class="page-scroll" href={% url "editor" %}>Editor</a>
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
