--- a/static/css/timeline.css
+++ b/static/css/timeline.css
@@ -72,8 +72,22 @@ section h3.section-subheading {
 	margin:0 auto;
 	background-color:#fff;
 	text-align:center;
-	padding:25px;
+	padding:5px;
 }
+.portfolio-item .portfolio-rightalign {
+	/*max-width:400px;*/
+	margin:10px;
+	background-color:#fff;
+	text-align:right;
+}
+.portfolio-item .portfolio-comment {
+	/*max-width:400px;*/
+	margin-left:20px;
+	margin-bottom:10px;
+	background-color:#fff;
+	text-align:left;
+}
+
 .portfolio-item .portfolio-caption h4 {
 	text-transform:none;
 	margin:0
