--- a/templates/timeline/card.html
+++ b/templates/timeline/card.html
@@ -1,9 +1,12 @@
 {% for i in posts %}
 {% load staticfiles %}
-<div class="col-md-6 col-md-offset-3 portfolio-item">
+<div class="col-md-6 col-md-offset-3 portfolio-item" style="background-color:white">
+    <div class="portfolio-rightalign">
+        <p class="text-muted">2016-04-30</p>
+    </div>
     <div class="portfolio-caption">
-        <h4>Round Icons</h4>
-        <p class="text-muted">Graphic Design</p>
+        <h4 style = "margin:10px ">Round Icons</h4>
+        <p class="text-muted" >Graphic Design</p>
     </div>
     <a href="#portfolioModal" class="portfolio-link" data-toggle="modal">
         <div class="portfolio-hover" data-toggle="tooltip" title="click to apply this theme">
@@ -11,7 +14,16 @@
                 <i class="fa fa-plus fa-5x"></i>
             </div>
         </div>
-        <img src={% static "img/portfolio/roundicons.png" %} class="img-responsive" alt="">
+        <img src="/media/images/nk.PNG"  class="img-responsive" alt="">
     </a>
+
+    <!--add-->
+    <div id = "Hiddenpart" style="display:none">
+
+    </div>
+
+    {% include 'timeline/comments.html' %}
 </div>
 {% endfor %}
+
+
