--- a/templates/timeline/timeline.html
+++ b/templates/timeline/timeline.html
@@ -14,14 +14,17 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Portfolio</h2>
-                <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                <h2 class="section-heading">Share Hall</h2>
+                <h3 class="section-subheading text-muted">Let's enjoy it.</h3>
             </div>
         </div>
         <div class="row" id="timeline-main">
-            <div class="col-md-6 col-md-offset-3 portfolio-item">
+            <div class="col-md-6 col-md-offset-3 portfolio-item" style="background-color:white">
+                <div class="portfolio-rightalign">
+                    <p class="text-muted">2016-04-30</p>
+                </div>
                 <div class="portfolio-caption">
-                    <h4>Round Icons</h4>
+                    <h4 style = "margin:10px ">Round Icons</h4>
                     <p class="text-muted">Graphic Design</p>
                 </div>
                 <a href="#portfolioModal" class="portfolio-link" data-toggle="modal">
@@ -30,9 +33,15 @@
                             <i class="fa fa-plus fa-5x"></i>
                         </div>
                     </div>
-                    <img src={% static "img/portfolio/roundicons.png" %} class="img-responsive" alt="">
+                    <img src="/media/images/nk.PNG"  class="img-responsive" alt="">
                 </a>
-            </div>
+
+                <!--add-->
+                <div id = "Hiddenpart" style="display:none">
+
+                </div>
+
+                {% include 'timeline/comments.html' %}
         </div>
     </div>
 </section>
