timeline fontpage update

--- a/templates/timeline/card.html
+++ b/templates/timeline/card.html
@@ -21,13 +21,13 @@
     <div id = "Hiddenpart" style="display:none">{{ post.id }}</div>
 
     <form class="form-inline" style = "margin:15px">
-        <div class="form-group" id="toggle-comments" onclick="toggle_comments($(this))">
-            <h5 > Show Comments</h5>
+        <div id="toggle-comments" align="center" onclick="toggle_comments($(this))">
+            <h5> Show Comments</h5>
         </div>
     </form>
 
 
-    <div class="collapse">
+    <div class="collapse" style="background-color:#F0F0F0">
         <form class="form-inline" style = "margin:15px">
             <div class="form-group">
                 <h5>comments:</h5>
