--- a/templates/editor/editor.html
+++ b/templates/editor/editor.html
@@ -36,6 +36,7 @@
 {% block script %}
     <script src={% static "js/PhotoEditorSDK.js" %}></script>
     <script src={% static "js/PhotoEditorReactUI.js" %}></script>
+    <script src={% static "js/theme.js" %}></script>
     <script src={% static "js/application.js" %}></script>
 
     <script>
